# eld_trip_planner

./: .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/: manage.py  package.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/backend/: settings.py
artifacts/api-server/trips/: models.py  services.py  urls.py  views.py
artifacts/api-server/trips/migrations/: 0001_initial.py  0002_driver_info.py
artifacts/trip-planner/: index.html  package.json
artifacts/trip-planner/.replit-artifact/: artifact.toml
artifacts/trip-planner/src/: App.tsx  index.css
artifacts/trip-planner/src/components/: EldLog.tsx  TripForm.tsx  TripMap.tsx
artifacts/trip-planner/src/components/layout/: Header.tsx
artifacts/trip-planner/src/pages/: home.tsx  trip-details.tsx  trip-list.tsx
lib/api-spec/: openapi.yaml
lib/db/src/schema/: index.ts  trips.ts
